--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     
-    <div id="start-welcome-title">ようこそ！天気予報サイトへ</div>
+    <div id="start-welcome-title">
+        <span>ようこそ！<br>天気予報サイトへ</span>
+    </div>
     
     <button id="bgm-toggle-btn" class="bgm-button action-button fixed-right-top">
         BGM: ON 🔈
