--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="start-welcome-title">
-        <span>ようこそ！<br>天気予報サイトへ</span>
+        <span>ようこそ<br>天気予報サイトへ</span>
     </div>
     
     <button id="bgm-toggle-btn" class="bgm-button action-button fixed-right-top">
